[tool.poetry]
name = "cemantix-assistant"
version = "0.1.0"
description = ""
authors = ["Clément Grimal <clement.grimal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^8.0.3"
gensim = "^4.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.scripts]
cemantix-assistant = "replay:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
